--- a/00_Backend/spring-petclinic-ai-main/src/main/resources/application.properties
+++ b/00_Backend/spring-petclinic-ai-main/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
