--- a/frontend_desktop/pubspec.yaml
+++ b/frontend_desktop/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Kalender
+  table_calendar: ^3.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -87,3 +90,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
